--- a/start.html
+++ b/start.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>My start file is not index.html file</h1>
-    <img src="img.jpg" alt="de-caprio">
+    <div>
+        <h3>New Blog</h3>
+        <h5>I can write a blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa sint qui architecto maiores perferendis maxime laborum accusantium saepe, blanditiis expedita quidem distinctio eos facere eaque eligendi consequatur mollitia omnis incidunt quia dignissimos libero! Magni ipsam consectetur deleniti repellat, tempora quo?</p>
+    </div>
+    <img src="doraemon.png" alt="doraemon">
 </body>
 </html>
