--- a/start.html
+++ b/start.html
@@ -7,7 +7,7 @@
     <title>Documented</title>
 </head>
 <body>
-    <h1>My start file is not index.html file</h1>
+    <h1>My start file is not index.html file but it is start.html</h1>
     <div>
         <h3>New Blog</h3>
         <h5>I can write a blog</h5>
